--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 body, html {
     width: 100%;
     height: 100%;
-    overflow: hidden; /* Remove barras de rolagem */
+    overflow-y: auto; /* Habilita rolagem vertical */
     display: flex;
     flex-direction: column;
     font-family: Arial, sans-serif;
@@ -30,9 +30,9 @@ main {
 }
 
 main img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+    width: 100%;
+    height: 90vh; /* Ajusta a imagem à altura da tela */
+    object-fit: fill; /* Permite distorção para preencher a tela */
 }
 
 footer {
@@ -55,3 +55,4 @@ button#refresh-button {
 button#refresh-button:hover {
     background-color: #0056b3;
 }
+
